test/classes/errors/newValueNotType3.good
newValueNotType3.chpl:7: syntax error: 'new' expression is missing its argument list
